--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,9 @@ setw -g mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 
+# Stop jumping after copy
+set -g @yank_action 'copy-pipe' # or 'copy-pipe-and-cancel' for the default
+
 # Meta-x enables syncronized panes (same command typed on multiple terminals)
 bind -n M-x setw synchronize-panes
 # Ctrl-k clears scrollback history
@@ -19,6 +22,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
