Add TPM install instructions to .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,7 @@
+# FIRST RUN THIS
+# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+# To install plugins: prefix + I (capital i). If it does not work, try "tmux source .tmux.conf" first.
+
 setw -g mode-keys vi
 setw -g mouse on
 
